# bopc2

bopc2026s-template_20260503/template/: Makefile  bopc.sty  bopc_report.tex
julia-student-1.0.0-Source/: CMakeLists.txt
julia-student-1.0.0-Source/contrib/: julia2img.py
julia-student-1.0.0-Source/docker/: Dockerfile
julia-student-1.0.0-Source/jobs_files/: run_filter_strong.job  run_filter_weak.job  run_juliap.job  run_juliap2.job
julia-student-1.0.0-Source/src/: filter.c  filter.h  filter_runner.c  juliap.c  juliap.h  juliap_runner.c  png_utils.c  png_utils.h
julia_cuda/jobs/: cpu_code_t4.job  gpu_code_t2.job  gpu_code_t3.job  gpu_code_t4.job  vars_in.sh
julia_cuda/output/: task2_1000.csv  task2_16000.csv  task2_2000.csv  task2_4000.csv  task2_8000.csv  task3_1024_1.csv  task3_128_1.csv  task3_1_1.csv  task3_1_32.csv  task3_32_1.csv  task4_cpu_1000.csv  task4_cpu_16000.csv  task4_cpu_2000.csv  task4_cpu_4000.csv  task4_cpu_8000.csv  task4_gpu_1000.csv  task4_gpu_16000.csv  task4_gpu_2000.csv  task4_gpu_4000.csv  task4_gpu_8000.csv
julia_cuda/output/blocksize/: benchmark_original_16x16.txt  benchmark_original_24x24.txt  benchmark_original_32x16.txt  benchmark_original_32x32.txt  benchmark_original_32x8.txt  benchmark_original_4x64.txt  benchmark_original_50x50.txt  benchmark_original_8x16.txt  benchmark_original_8x32.txt
julia_cuda/output/old_1d_blocksize/: task2_1000.csv  task2_16000.csv  task2_2000.csv  task2_4000.csv  task2_8000.csv  task3_1024_1.csv  task3_128_1.csv  task3_1_1.csv  task3_1_32.csv  task3_32_1.csv  task4_cpu_1000.csv  task4_cpu_16000.csv  task4_cpu_2000.csv  task4_cpu_4000.csv  task4_cpu_8000.csv  task4_gpu_1000.csv  task4_gpu_16000.csv  (+3 more)
julia_cuda/src/: ._tinycolormap.hpp  Makefile  Makefile.gpu  cli_parser.cpp  cli_parser.hpp  complex.hpp  complex_gpu.cuh  cuda_foobar.cu  image.cpp  image.hpp  juliaset.cpp  kernel.hpp  kernel_cpu.cpp  kernel_gpu.cu  pyproject.toml  tinycolormap.hpp
